# OpenTranscribe

./: .dockleignore  .env.example  .gitignore  .gitleaksignore  .hadolint.yaml  .pre-commit-config.yaml  .windsurfrules  BACKEND_DOCUMENTATION.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  CROSS_PLATFORM_README.md  ISSUE_23_COMPREHENSIVE_IMPLEMENTATION_PLAN.md  ISSUE_23_IMPLEMENTATION_TODOS.md  ISSUE_37_INVESTIGATION.md  LICENSE  LLM_DEPLOYMENT_OPTIONS.md  README-OFFLINE.md  README.md  REFACTORING_SUMMARY.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.1.0.md  TO-DOS.md  VERIFICATION_CHECKLIST.md  docker-compose.bench.yml  docker-compose.benchmark.yml  docker-compose.blackwell.yml  docker-compose.gpu-rocm.yml  docker-compose.gpu-scale.yml  docker-compose.gpu.yml  docker-compose.keycloak.yml  docker-compose.ldap-test.yml  docker-compose.lite.yml  docker-compose.local.yml  docker-compose.nas.yml  docker-compose.nginx.yml  docker-compose.nvidia.yml  docker-compose.offline.yml  docker-compose.override.yml  (+20 more)
backend/: .dockerignore  DOCKER_STRATEGY.md  Dockerfile.blackwell  Dockerfile.dev  Dockerfile.dev.optimized  Dockerfile.lite  Dockerfile.multiplatform  Dockerfile.prod  Dockerfile.prod.optimized  Dockerfile.rocm  README.md  alembic.ini  create_admin_user.py  create_admin_user_simple.py  create_docker_admin.py  create_minio_bucket.py  pyproject.toml  requirements-dev.txt  requirements-lite.txt  requirements-rocm.txt  requirements.txt  test_speaker_id.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: add_speaker_fields.py  initial_migration.py  v010_baseline.py  v020_add_system_settings.py  v031_add_keycloak_pki_auth.py  v040_add_fedramp_compliance.py  v050_add_search_settings.py  v060_add_transcript_overlap.py  v070_pki_security.py  v071_add_transcript_segment_unique_constraint.py  v072_add_queued_downloading_statuses.py  v073_convert_filestatus_enum_to_varchar.py  v080_add_auth_config.py  v090_add_error_category.py  v091_add_speaker_suggestion_source.py  v100_optimize_query_performance.py  v110_add_missing_fk_indexes.py  v120_add_remaining_fk_indexes.py  v130_add_processing_model_tracking.py  v140_add_word_timestamps.py  v150_add_file_retention_settings.py  v160_add_allow_local_fallback.py  v170_add_keycloak_refresh_token.py  v180_add_collection_default_prompt.py  v180_add_speaker_attributes.py  v190_add_collection_default_prompt.py  v200_schema_reconciliation.py  v210_add_groups_and_sharing.py  v210_add_speaker_clusters.py  v211_add_sharing_constraints_and_indexes.py  v220_add_speaker_clusters.py  v230_add_auto_labeling.py  v250_add_speaker_clustering_indexes.py  v260_add_cluster_quality_metrics.py  v270_add_asr_provider_support.py  v270_add_profile_avatar.py  v280_add_upload_sessions.py  v290_add_password_reset_tokens.py  v300_add_gender_confirmed.py  v310_add_speaker_constraints.py  (+11 more)
backend/app/: README.md  initial_data.py  main.py
backend/app/api/: README.md  router.py  websockets.py
backend/app/auth/: audit.py  constants.py  cookies.py  direct_auth.py  keycloak_auth.py  ldap_auth.py  lockout.py  mfa.py  password_history.py  password_policy.py  password_reset.py  (+5 more)
backend/scripts/: README.md  benchmark_migration.py  benchmark_queries.py  blackwell_patches.py  compare_benchmarks.py  create_admin.py  create_minio_bucket.py  create_opensearch_indexes.py  db_inspect.py  fix_error_status.py  query_tags.py  retry_youtube_auth_errors_staggered.py
backend/tests/: AUTH_TEST_SETUP.md  README.md  conftest.py  test_admin_endpoints.py  test_admin_security.py  test_asr_settings.py  test_auth_config_integration.py  test_auth_config_service.py  test_embedding_migration_integration.py  test_error_classification.py  test_external_llm.py  test_fedramp_compliance.py  test_fedramp_controls.py  test_fips_140_3.py  test_llm_settings.py  test_main.py  test_media_security.py  test_mediacms_provider.py  test_mfa_integration.py  test_mfa_security.py  test_organization_context.py  test_pki_auth.py  test_search_quality.py  test_selective_reprocess.py  test_speaker_constraints.py  test_speaker_profile_sharing.py
(+1133 files in other folders)
