[build-system]
requires = ["setuptools", "wheel"]

[tool.ruff]
# Same as Black.
line-length = 100

# Assume Python 3.9+
target-version = "py39"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "W", "I", "N", "UP", "C90", "B", "A", "S", "SIM", "PIE"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E203",  # Whitespace before ':' (conflicts with black)
    "S101",  # Use of assert (common in tests)
    "B008",  # Do not perform function call in argument defaults (FastAPI dependencies)
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, etc.
"*/tests/*" = ["S101", "PLR2004", "S106", "S608"]
# Allow imports at top level of __init__.py
"__init__.py" = ["F401"]
# Migrations can have long lines and other issues
"**/migrations/**" = ["E501", "F401"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"